Stop collapsing search field in navbar on small screens.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -192,6 +192,14 @@ fieldset[disabled] .btn-dark.active {
     overflow-x: hidden;
 }
 
+@media (max-width: 576px){
+    .search-div {
+        flex-grow: 1;
+        flex-shrink: 1;
+        flex-basis: 0;
+    }
+}
+
 .fit-content-width{
     min-width: fit-content;
 }
